apollo-router/src/plugins/progressive_override/snapshots/uhg_custom_appollo_roouter__plugins__progressive_override__tests__non_overridden_field_yields_expected_query_plan.snap
---
source: apollo-router/src/plugins/progressive_override/tests.rs
assertion_line: 314
expression: query_plan
---
{
  "data": null,
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "Subgraph2"
      }
    }
  ],
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Fetch",
          "serviceName": "Subgraph2",
          "variableUsages": [],
          "operation": "{ percent0 { foo } }",
          "operationName": null,
          "operationKind": "query",
          "id": null,
          "inputRewrites": null,
          "outputRewrites": null,
          "contextRewrites": null,
          "schemaAwareHash": "83a61d8e05a2342e4c13c5b518e1e4a5b4cbc405477fce069c784526eb3b1ae5",
          "authorization": {
            "is_authenticated": false,
            "scopes": [],
            "policies": []
          }
        }
      },
      "text": "QueryPlan {\n  Fetch(service: \"Subgraph2\") {\n    {\n      percent0 {\n        foo\n      }\n    }\n  },\n}"
    }
  }
}
