apollo-router/src/plugins/progressive_override/snapshots/uhg_custom_appollo_roouter__plugins__progressive_override__tests__overridden_field_yields_expected_query_plan.snap
---
source: apollo-router/src/plugins/progressive_override/tests.rs
assertion_line: 323
expression: query_plan
---
{
  "data": {
    "percent100": null
  },
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "Subgraph1"
      }
    }
  ],
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "kind": "Fetch",
              "serviceName": "Subgraph1",
              "variableUsages": [],
              "operation": "{ percent100 { __typename id } }",
              "operationName": null,
              "operationKind": "query",
              "id": null,
              "inputRewrites": null,
              "outputRewrites": null,
              "contextRewrites": null,
              "schemaAwareHash": "3c438d69bd20986101e4fb91167d5db4b871b250a5e5b670e19e9305b2756baa",
              "authorization": {
                "is_authenticated": false,
                "scopes": [],
                "policies": []
              }
            },
            {
              "kind": "Flatten",
              "path": [
                "percent100"
              ],
              "node": {
                "kind": "Fetch",
                "serviceName": "Subgraph2",
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "typeCondition": "T",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ]
                  }
                ],
                "variableUsages": [],
                "operation": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on T { foo } } }",
                "operationName": null,
                "operationKind": "query",
                "id": null,
                "inputRewrites": null,
                "outputRewrites": null,
                "contextRewrites": null,
                "schemaAwareHash": "fcec2495ee805f82a5712f74f89797ed678eb5118ff8044a1c8fb232d6dd16df",
                "authorization": {
                  "is_authenticated": false,
                  "scopes": [],
                  "policies": []
                }
              }
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        percent100 {\n          __typename\n          id\n        }\n      }\n    },\n    Flatten(path: \"percent100\") {\n      Fetch(service: \"Subgraph2\") {\n        {\n          ... on T {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on T {\n            foo\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
